--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/minix"]
-	path = src/minix
-	url = git://git.minix3.org/minix
+[submodule "src/netbsd"]
+	path = src/netbsd
+	url = https://github.com/NetBSD/src.git
